--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-cptpl": "^0.1.3",
     "grunt-text-replace":"^0.4.0",
-    "load-grunt-tasks": "^3.4.0"
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-cssmin": "^0.12.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-usemin": "^3.0.0",
+    "load-grunt-tasks": "^3.5.0",
+    "time-grunt": "^1.0.0"
   },
 
   "files": [
