--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "S3ToolBox",
-  "version": "0.0.0",
+  "name": "s3toolbox",
+  "version": "1.0",
   "homepage": "http://109.6.13.48/nfc-chent/s3toolbox/tree/master",
   "description": "gongyinju s3 tool box",
   "license": "MIT",
